EPBR-1463 Update gateway to explicity call inner join
