# api/api.yml
@@ -757,6 +757,56 @@ paths:
         500:
           description: Server error
 
+  /assessments/{assessmentId}/meta-data:
+    get:
+      tags:
+        - Manage Assessments
+      summary: Get assessment meta data attributes used by data-warehouse in JSON format
+      security:
+        - oauth:
+            - 'assessment:fetch'
+      parameters:
+        - in: path
+          name: assessmentId
+          required: true
+          description: 'The ID of the assessment being requested, usually RRN'
+          schema:
+            $ref: '#/components/schemas/AssessmentId'
+      responses:
+        200:
+          description: Energy Performance Assessment
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    oneOf:
+                      - $ref: '#/components/schemas/DomesticEnergyAssessmentSummary'
+                      - $ref: '#/components/schemas/CommercialEnergyAssessmentSummary'
+        404:
+          description: Assessment not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        400:
+          description: Bad request - The assessmentId parameter is badly formatted
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        410:
+          description: >-
+            Assessment no long accessible
+            (could have been cancelled or marked not for issue)
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        500:
+          description: Server error
+
   /assessments/{assessmentId}/opt-out:
     put:
       tags:
